--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -14,6 +14,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    filter: brightness(55%);
     height: 250vh;
     width: 100vw;
     overflow: hidden;
@@ -41,20 +42,4 @@
 
 .flip-both {
     transform: scaleX(-1) scaleY(-1);
-}
-
-
-.landing-bg-cover{
-    background-image: linear-gradient(
-            to bottom,
-            rgba(0, 0, 0, 0.9) 0%,
-            rgba(0, 0, 0, 0) 50%, /* Middle is transparent */
-            rgba(0, 0, 0, 0.9) 100%
-    );
-    height: 100vh;
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    right: 0;
 }
