--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -50,7 +50,7 @@
     text-decoration: none;
     margin: 0 15px;
     font-weight: bold;
-    font-size: 1vw; /* Standardized font size here */
+    font-size: calc(0.7vw + 0.7vh); /* Standardized font size here */
     padding: 1vh 0.5vw; /* Increased clickable area */
     transition: color 0.2s ease; /* Smooth transition for hover effect */
 }
