--- a/src/components/wiki-page/Chatbot.css
+++ b/src/components/wiki-page/Chatbot.css
@@ -1,6 +1,6 @@
 .chat-container {
   width: 100vw;
-  height: 100vh;
+  height: 115vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,8 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4)),
                     url(../../assets/wiki.png);
   background-size: cover;
-  padding-bottom: 20vh; 
+  margin-top: -10vh;
+  padding-bottom: 20vh;
 }
 
 .chat-container.no-background {
@@ -39,6 +40,7 @@
 }
 
 .logo {
+  margin-top: -10vh;
   filter:drop-shadow(20px 20px 20px #000000);
 }
 
